--- a/pepeizqs deals web/Pages/Game.cshtml
+++ b/pepeizqs deals web/Pages/Game.cshtml
@@ -54,5 +54,12 @@
 		userAgent = HttpContext.Request.Headers.UserAgent;
 	}
 
-	<component type="typeof(Componentes.Secciones.Juego)" render-mode="ServerPrerendered" param-idioma="idioma" param-juego="Model.juego" param-usuarioId="usuario?.Id" param-usuarioLogeado="usuarioLogeado" param-userAgent="userAgent" />
+	if (Herramientas.RobotsUserAgents.EsBotVerificado(userAgent) == true)
+	{
+		<component type="typeof(Componentes.Secciones.Juego)" render-mode="ServerPrerendered" param-idioma="idioma" param-juego="Model.juego" param-usuarioId="usuario?.Id" param-usuarioLogeado="usuarioLogeado" param-userAgent="userAgent" />
+	}
+	else
+	{
+		<component type="typeof(Componentes.Secciones.Juego)" render-mode="Server" param-idioma="idioma" param-juego="Model.juego" param-usuarioId="usuario?.Id" param-usuarioLogeado="usuarioLogeado" param-userAgent="userAgent" />
+	}
 }
