--- a/pepeizqs deals web/Pages/Componentes/Interfaz/CajaJuego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Interfaz/CajaJuego.razor
@@ -190,8 +190,8 @@
 				string videoMostrar = tooltip.Video;
 
 				<video onloadedmetadata="this.muted=true" playsinline autoplay loop muted style="width: 460px; height: 215px; object-fit: cover;">
-					<source src="@videoMostrar" type="video/mp4" />
-					<source src="@videoMostrar.Replace(".mp4", ".webm")" type="video/webm" />	
+					 <source src="@videoMostrar" type="video/mp4" />
+					 <source src="@videoMostrar.Replace(".mp4", ".webm")" type="video/webm" />	
 				</video>
 			}
 
@@ -392,13 +392,9 @@
 						<div class="minimo-fuente">@juego.Nombre</div>
 
 						<div class="perfil-flexible-centrado" style="justify-content: left; margin-top: 10px; gap: 10px;">
-							<div style="width: 20px; height: 20px;">
-								<img src="@Herramientas.Ficheros.Imagenes.ServidorExterno(JuegoDRM2.SacarImagen(drmUsar))" style="width: 100%; height: 100%;" loading="lazy" />
-							</div>
+							<img src="@Herramientas.Ficheros.Imagenes.ServidorExterno(JuegoDRM2.SacarImagen(drmUsar))" style="width: 20px; height: 20px;" loading="lazy" />
 
-							<div style="width: 20px; height: 20px;">
-								<img src="@Herramientas.Ficheros.Imagenes.ServidorExterno(iconoTienda)" style="width: 100%; height: 100%;" loading="lazy" />
-							</div>
+							<img src="@Herramientas.Ficheros.Imagenes.ServidorExterno(iconoTienda)" style="width: 20px; height: 20px;" loading="lazy" />
 
 							@if (juego.Analisis != null)
 							{
@@ -406,17 +402,17 @@
 								{
 									if (int.Parse(juego.Analisis.Porcentaje) > 74)
 									{
-										<img src="/imagenes/analisis/positivo3.svg" style="max-width: 22px; max-height: 22px;" loading="lazy" />
+										<img src="/imagenes/analisis/positivo3.svg" style="max-width: 22px; max-height: 22px;" loading="lazy" alt="Reviews Good"/>
 									}
 
 									if (int.Parse(juego.Analisis.Porcentaje) > 49 && int.Parse(juego.Analisis.Porcentaje) < 75)
 									{
-										<img src="/imagenes/analisis/meh3.svg" style="max-width: 22px; max-height: 22px;" loading="lazy" />
+										<img src="/imagenes/analisis/meh3.svg" style="max-width: 22px; max-height: 22px;" loading="lazy" alt="Reviews Meh"/>
 									}
 
 									if (int.Parse(juego.Analisis.Porcentaje) < 50)
 									{
-										<img src="/imagenes/analisis/negative3.svg" style="max-width: 22px; max-height: 22px;" loading="lazy" />
+										<img src="/imagenes/analisis/negativo3.svg" style="max-width: 22px; max-height: 22px;" loading="lazy" alt="Reviews Bad"/>
 									}
 								}
 							}
@@ -493,17 +489,17 @@
 								{
 									if (int.Parse(juego.Analisis.Porcentaje) > 74)
 									{
-										<img src="/imagenes/analisis/positivo3.svg" style="max-width: 22px; max-height: 22px;" loading="lazy" />
+										<img src="/imagenes/analisis/positivo3.svg" style="max-width: 22px; max-height: 22px;" loading="lazy" alt="Reviews Good"/>
 									}
 
 									if (int.Parse(juego.Analisis.Porcentaje) > 49 && int.Parse(juego.Analisis.Porcentaje) < 75)
 									{
-										<img src="/imagenes/analisis/meh3.svg" style="max-width: 22px; max-height: 22px;" loading="lazy" />
+										<img src="/imagenes/analisis/meh3.svg" style="max-width: 22px; max-height: 22px;" loading="lazy" alt="Reviews Meh"/>
 									}
 
 									if (int.Parse(juego.Analisis.Porcentaje) < 50)
 									{
-										<img src="/imagenes/analisis/negative3.svg" style="max-width: 22px; max-height: 22px;" loading="lazy" />
+										<img src="/imagenes/analisis/negativ03.svg" style="max-width: 22px; max-height: 22px;" loading="lazy" alt="Reviews Bad"/>
 									}
 								}
 							}
