--- a/pepeizqs deals web/Pages/Index.cshtml
+++ b/pepeizqs deals web/Pages/Index.cshtml
@@ -30,5 +30,12 @@
 	ViewData["Title"] = "pepeizq's deals • " + Herramientas.Idiomas.BuscarTexto(idioma, "Subtitle", "Index");
 	Layout = "/Pages/Shared/_Layout.cshtml";
 
-	<component type="typeof(Portada)" render-mode="ServerPrerendered" param-idioma="idioma" param-usuarioLogeado="usuarioLogeado" param-usuarioId="usuario?.Id" />
+	@if (Herramientas.RobotsUserAgents.EsBotVerificado(HttpContext.Request.Headers.UserAgent.ToString()) == true)
+	{
+		<component type="typeof(Portada)" render-mode="ServerPrerendered" param-idioma="idioma" param-usuarioLogeado="usuarioLogeado" param-usuarioId="usuario?.Id" />
+	}
+	else
+	{
+		<component type="typeof(Portada)" render-mode="Server" param-idioma="idioma" param-usuarioLogeado="usuarioLogeado" param-usuarioId="usuario?.Id" />
+	}
 }
