--- a/pepeizqs deals web/Pages/Subscriptions.cshtml
+++ b/pepeizqs deals web/Pages/Subscriptions.cshtml
@@ -31,5 +31,12 @@
     ViewData["Title"] = Herramientas.Idiomas.BuscarTexto(idioma, "Title", "Subscriptions");
     Layout = "/Pages/Shared/_Layout.cshtml";
 
-    <component type="typeof(Componentes.Secciones.Suscripciones)" render-mode="ServerPrerendered" param-idioma="idioma" param-usuarioId="usuario?.Id" />
+    if (Herramientas.RobotsUserAgents.EsBotVerificado(HttpContext.Request.Headers.UserAgent.ToString()) == true)
+	{
+		<component type="typeof(Componentes.Secciones.Suscripciones)" render-mode="ServerPrerendered" param-idioma="idioma" param-usuarioId="usuario?.Id" />
+	}
+	else
+	{
+		<component type="typeof(Componentes.Secciones.Suscripciones)" render-mode="Server" param-idioma="idioma" param-usuarioId="usuario?.Id" />
+	}
 }
