--- a/pepeizqs deals web/Pages/api.cshtml
+++ b/pepeizqs deals web/Pages/api.cshtml
@@ -31,5 +31,12 @@
 	ViewData["Title"] = Herramientas.Idiomas.BuscarTexto(idioma, "Title", "Api");
 	Layout = "/Pages/Shared/_Layout.cshtml";
 
-	<component type="typeof(Componentes.Secciones.Api)" render-mode="ServerPrerendered" param-idioma="idioma" />
+	if (Herramientas.RobotsUserAgents.EsBotVerificado(HttpContext.Request.Headers.UserAgent.ToString()) == true)
+	{
+		<component type="typeof(Componentes.Secciones.Api)" render-mode="ServerPrerendered" param-idioma="idioma" />
+	}
+	else
+	{
+		<component type="typeof(Componentes.Secciones.Api)" render-mode="Server" param-idioma="idioma" />
+	}
 }
