--- a/pepeizqs deals web/Pages/cost-web.cshtml
+++ b/pepeizqs deals web/Pages/cost-web.cshtml
@@ -30,6 +30,13 @@
 	ViewData["Title"] = Herramientas.Idiomas.BuscarTexto(idioma, "Title", "CostWeb");
 	Layout = "/Pages/Shared/_Layout.cshtml";
 
-	<component type="typeof(Componentes.Secciones.Coste)" render-mode="ServerPrerendered" param-idioma="idioma" />
+	if (Herramientas.RobotsUserAgents.EsBotVerificado(HttpContext.Request.Headers.UserAgent.ToString()) == true)
+	{
+		<component type="typeof(Componentes.Secciones.Coste)" render-mode="ServerPrerendered" param-idioma="idioma" />
+	}
+	else
+	{
+		<component type="typeof(Componentes.Secciones.Coste)" render-mode="Server" param-idioma="idioma" />
+	}
 }
 
