--- a/pepeizqs deals web/Pages/forum.cshtml
+++ b/pepeizqs deals web/Pages/forum.cshtml
@@ -31,6 +31,14 @@
     ViewData["Title"] = Herramientas.Idiomas.BuscarTexto(idioma, "Title", "Forum");
     Layout = "/Pages/Shared/_Layout.cshtml";
 
-    <component type="typeof(Componentes.Secciones.Foro)" render-mode="ServerPrerendered" param-idioma="idioma" param-usuarioId="usuario?.Id" param-usuarioLogeado="usuarioLogeado" 
-        param-categoriaId="Model.categoriaId" param-postId="Model.postId"/>
+    if (Herramientas.RobotsUserAgents.EsBotVerificado(HttpContext.Request.Headers.UserAgent.ToString()) == true)
+	{
+		<component type="typeof(Componentes.Secciones.Foro)" render-mode="ServerPrerendered" param-idioma="idioma" param-usuarioId="usuario?.Id" param-usuarioLogeado="usuarioLogeado" 
+            param-categoriaId="Model.categoriaId" param-postId="Model.postId"/>
+	}
+	else
+	{
+		<component type="typeof(Componentes.Secciones.Foro)" render-mode="Server" param-idioma="idioma" param-usuarioId="usuario?.Id" param-usuarioLogeado="usuarioLogeado" 
+            param-categoriaId="Model.categoriaId" param-postId="Model.postId"/>
+	}
 }
