--- a/pepeizqs deals web/Pages/historical-lows.cshtml
+++ b/pepeizqs deals web/Pages/historical-lows.cshtml
@@ -31,5 +31,12 @@
 	ViewData["Title"] = Herramientas.Idiomas.BuscarTexto(idioma, "Title", "HistoricalLows");
 	Layout = "/Pages/Shared/_Layout.cshtml";
 
-	<component type="typeof(Componentes.Secciones.Minimos)" render-mode="ServerPrerendered" param-idioma="idioma" param-usuarioId="usuario?.Id" param-usuarioLogeado="usuarioLogeado" param-drmEscrito="Model.drm" param-tiendaEscrita="Model.tienda" />
+	if (Herramientas.RobotsUserAgents.EsBotVerificado(HttpContext.Request.Headers.UserAgent.ToString()) == true)
+	{
+		<component type="typeof(Componentes.Secciones.Minimos)" render-mode="ServerPrerendered" param-idioma="idioma" param-usuarioId="usuario?.Id" param-usuarioLogeado="usuarioLogeado" param-drmEscrito="Model.drm" param-tiendaEscrita="Model.tienda" />
+	}
+	else
+	{
+		<component type="typeof(Componentes.Secciones.Minimos)" render-mode="Server" param-idioma="idioma" param-usuarioId="usuario?.Id" param-usuarioLogeado="usuarioLogeado" param-drmEscrito="Model.drm" param-tiendaEscrita="Model.tienda" />
+	}
 }
