--- a/pepeizqs deals web/Pages/last-added.cshtml
+++ b/pepeizqs deals web/Pages/last-added.cshtml
@@ -29,5 +29,12 @@
 	ViewData["Title"] = Herramientas.Idiomas.BuscarTexto(idioma, "Title", "LastAdded");
 	Layout = "/Pages/Shared/_Layout.cshtml";
 
-	<component type="typeof(Componentes.Secciones.UltimosAnadidos)" render-mode="ServerPrerendered" param-idioma="idioma" />
+	if (Herramientas.RobotsUserAgents.EsBotVerificado(HttpContext.Request.Headers.UserAgent.ToString()) == true)
+	{
+		<component type="typeof(Componentes.Secciones.UltimosAnadidos)" render-mode="ServerPrerendered" param-idioma="idioma" />
+	}
+	else
+	{
+		<component type="typeof(Componentes.Secciones.UltimosAnadidos)" render-mode="Server" param-idioma="idioma" />
+	}
 }
