--- a/pepeizqs deals web/Pages/patreon.cshtml
+++ b/pepeizqs deals web/Pages/patreon.cshtml
@@ -31,5 +31,12 @@
     ViewData["Title"] = Herramientas.Idiomas.BuscarTexto(idioma, "Title", "Patreon");
     Layout = "/Pages/Shared/_Layout.cshtml";
 
-    <component type="typeof(Componentes.Secciones.Patreon)" render-mode="ServerPrerendered" param-idioma="idioma" param-usuarioId="usuario?.Id" />
+    if (Herramientas.RobotsUserAgents.EsBotVerificado(HttpContext.Request.Headers.UserAgent.ToString()) == true)
+    {
+        <component type="typeof(Componentes.Secciones.Patreon)" render-mode="ServerPrerendered" param-idioma="idioma" param-usuarioId="usuario?.Id" />
+    }
+    else
+    {
+        <component type="typeof(Componentes.Secciones.Patreon)" render-mode="Server" param-idioma="idioma" param-usuarioId="usuario?.Id" />
+    }
 }
